k8s-dev/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  labels:
    name: ingress-service
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - web-chess.com
      secretName: web-chess-tls
  rules:
    - host: web-chess.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: front-main-service-cluster-ip
                port:
                  number: 3000
          - path: "/api/websocket"
            pathType: Prefix
            backend:
              service:
                name: back-websocket-service-cluster-ip
                port:
                  number: 3000
          - path: "/api/agent/stockfish"
            pathType: Prefix
            backend:
              service:
                name: back-agent-stockfish-service-cluster-ip
                port:
                  number: 3000
